RESOLVED FIXED191455
WebHistory.h: warning: 'QueryInterface' overrides a member function but is not marked 'override' [-Winconsistent-missing-override]
https://bugs.webkit.org/show_bug.cgi?id=191455
Summary WebHistory.h: warning: 'QueryInterface' overrides a member function but is no...
Fujii Hironori
Reported 2018-11-08 21:17:33 PST
WebHistory.h: warning: 'QueryInterface' overrides a member function but is not marked 'override' [-Winconsistent-missing-override] Clang-cl reports following compilation warnings while building WinCairo port: > [5754/6223] Building CXX object Source\WebKitLegacy\CMakeFiles\WebKitLegacy.dir\win\WebHistory.cpp.obj > In file included from ..\..\Source\WebKitLegacy\win\WebHistory.cpp:27: > ..\..\Source\WebKitLegacy\win/WebHistory.h(54,39): warning: 'QueryInterface' overrides a member function but is not marked 'override' [-Winconsistent-missing-override] > virtual HRESULT STDMETHODCALLTYPE QueryInterface(_In_ REFIID riid, _COM_Outptr_ void** ppvObject); > ^ > C:\Program Files (x86)\Windows Kits\10\include\10.0.17134.0\um\unknwnbase.h(113,47): note: overridden virtual function is here > virtual HRESULT STDMETHODCALLTYPE QueryInterface( > ^ > In file included from ..\..\Source\WebKitLegacy\win\WebHistory.cpp:27: > ..\..\Source\WebKitLegacy\win/WebHistory.h(55,37): warning: 'AddRef' overrides a member function but is not marked 'override' [-Winconsistent-missing-override] > virtual ULONG STDMETHODCALLTYPE AddRef(); > ^ > C:\Program Files (x86)\Windows Kits\10\include\10.0.17134.0\um\unknwnbase.h(117,45): note: overridden virtual function is here > virtual ULONG STDMETHODCALLTYPE AddRef( void) = 0; > ^ > In file included from ..\..\Source\WebKitLegacy\win\WebHistory.cpp:27: > ..\..\Source\WebKitLegacy\win/WebHistory.h(56,37): warning: 'Release' overrides a member function but is not marked 'override' [-Winconsistent-missing-override] > virtual ULONG STDMETHODCALLTYPE Release(); > ^ > C:\Program Files (x86)\Windows Kits\10\include\10.0.17134.0\um\unknwnbase.h(119,45): note: overridden virtual function is here > virtual ULONG STDMETHODCALLTYPE Release( void) = 0; > ^
Attachments
Patch (4.34 KB, patch)
2018-11-08 21:23 PST, Fujii Hironori
no flags
Fujii Hironori
Comment 1 2018-11-08 21:23:12 PST
Don Olmstead
Comment 2 2018-11-08 21:26:47 PST
LGTM
Brent Fulgham
Comment 3 2018-11-09 08:18:09 PST
Comment on attachment 354312 [details] Patch Nice! It's great to see more of this code getting good attention. Thank you!
WebKit Commit Bot
Comment 4 2018-11-09 08:42:59 PST
Comment on attachment 354312 [details] Patch Clearing flags on attachment: 354312 Committed r238032: <https://trac.webkit.org/changeset/238032>
WebKit Commit Bot
Comment 5 2018-11-09 08:43:01 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6 2018-11-09 08:44:09 PST
Note You need to log in before you can comment on or make changes to this bug.