WebHistory.h: warning: 'QueryInterface' overrides a member function but is not marked 'override' [-Winconsistent-missing-override] https://bugs.webkit.org/show_bug.cgi?id=191455

Reviewed by Brent Fulgham.

* WebHistory.h: Marked with 'override' and removed 'virtual'.


Canonical link: https://commits.webkit.org/206246@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@238032 268f45cc-cd09-0410-ab3c-d52691b4dbfc